# careflow-ai-backend

./: .env.example  .gitignore  DECISIONS.md  README.md  TECH_DEBT.md  VERIFICATION_REPORT.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.tmp_pgdata/: log  postgresql.conf
.tmp_pgdata/base/1/: 1247_vm  1255_vm  12852  12856  12862_vm  12867_vm  2600_vm  2605_vm  2608  2609  2609_vm  2615  2615_vm  2617_vm  2619_vm  2666  2673  2674  2675  2681  2682  2691  2692  2704  2836  2836_vm  2838  2838_fsm  2839  2840  2841  3079  3079_vm  3080  3081  3164  3395  3455  3456  3456_vm  (+4 more)
.tmp_pgdata/base/4/: 1255  1259  12857_vm  12862  12871  2601_vm  2602_vm  2603_vm  2606  2606_vm  2607_vm  2612_vm  2619  2658  2659  2662  2665  2667  2678  2685  2693  2703  2838_vm  2840_vm  3394_vm  3456_fsm  3600  3602_vm  3603  3603_vm  3608  3609  3764_vm  3767
.tmp_pgdata/base/5/: 1247  1249  1249_vm  1259  1259_vm  12852_vm  12857  12861  12866  12867  2579  2608_vm  2610  2610_vm  2612  2616_vm  2618  2618_vm  2619_fsm  2663  2664  2679  2684  2690  2696  2753_vm  2837  3085  3394  3541_vm  3600_vm  3602  3712  3764
.tmp_pgdata/global/: 1213_vm  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control
.tmp_pgdata/pg_stat/: pgstat.stat
app/: config.py  main.py
app/api/: deps.py  health.py
app/api/v1/: triage.py
app/application/: __init__.py  llm_port.py  ports.py  triage_service.py
app/core/: rbac.py
app/domain/: __init__.py  entities.py  enums.py  exceptions.py
app/infrastructure/: database.py  llm.py  logging.py  models.py
app/infrastructure/repositories/: __init__.py  ai_recommendation.py  audit_log.py  conversation_message.py  mapping.py  safety_flag.py  service_request.py  staff_decision.py  staff_user.py  triage_answer.py  user_session.py
app/safety/: __init__.py  engine.py
app/schemas/: triage.py
migrations/: env.py  script.py.mako
migrations/versions/: 2dd93dc2448e_recommendations_append_only.py  3ab41c9de001_restrict_deletion_policy.py  f6f6706f024d_initial_schema.py
tests/: __init__.py  conftest.py
tests/e2e/: test_demo_scenarios.py
tests/integration/: test_constraint_translation.py  test_health.py  test_migrations.py  test_orm_non_leakage.py  test_postgresql_append_only.py  test_repositories.py  test_transaction_ownership.py
tests/unit/: test_architecture.py  test_config.py  test_domain_entities.py  test_domain_enums.py  test_mock_llm_provider.py  test_rbac.py
