[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "careflow-ai"
version = "0.1.0"
description = "Bilingual healthcare navigation and initial triage assistant"
authors = ["CareFlow Team <team@careflow.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.17.0"}
python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"
pyright = "^1.1.335"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C4", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
