# NOTE: This file provides package metadata and tool configuration (ruff, pyright,
# pytest) only. The verified local install workflow is venv + pip with pinned
# requirements.txt / requirements-dev.txt — Poetry is NOT installed on this
# machine and is not the active workflow. The [tool.poetry] section is retained
# as forward-looking metadata should Poetry be adopted later.

[tool.poetry]
name = "careflow-ai"
version = "0.1.0"
description = "Bilingual healthcare navigation and initial triage assistant"
authors = ["CareFlow Team <team@careflow.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.2"}
asyncpg = "^0.31"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"
pyright = "^1.1.335"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
# NOTE: declared target is 3.12, but only Python 3.9.6 is available on this
# machine. target-version matches the actual runtime so lint rules do not
# suggest syntax the interpreter cannot execute. Bump to py312 when provisioned.
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C4", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.9"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
# Test code uses untyped fixtures; production code stays strict.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
